--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Jetpack Compose Playground</string>
+    <string name="otp">Otp screen</string>
 </resources>
